[gd_scene load_steps=3 format=3 uid="uid://dq7jc2bb3lxnc"]

[ext_resource type="Script" uid="uid://b7u8vf6gsjlt2" path="res://scenes/player_select_menu/player_select.gd" id="1_8a6pg"]
[ext_resource type="Theme" uid="uid://n7d22alloqdb" path="res://resources/default.tres" id="2_2ujup"]

[node name="PlayerSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8a6pg")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -56.0
offset_right = 32.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_2ujup")

[node name="UnoPlayer" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "1 Player"

[node name="DosPlayer" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "2 Player"

[node name="TresPlayer" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "3 Player"

[node name="CuatroPlayer" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "4 Player"

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = -7
position = Vector2(322, -26)
amount = 50
lifetime = 5.0
preprocess = 3.0
emission_shape = 3
emission_rect_extents = Vector2(480, 1)
gravity = Vector2(0, 100)
scale_amount_min = 0.5
scale_amount_max = 3.0
